Fixed the issue of scrollbar going down automatically when messages been send

--- a/aware-app/src/messaging-service/ChatFeature/ChatWindow.css
+++ b/aware-app/src/messaging-service/ChatFeature/ChatWindow.css
@@ -6,3 +6,7 @@
     max-height: 80%;
     overflow: auto;
 }
+#scrollbar {
+  float: left;
+  clear: both;
+}
